// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component render filled button with dark hover 1`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ jnzkTG"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`Button component render filled button with light hover 1`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ fpcsXZ"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`Button component render fullwidth button 1`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ eqFKKQ"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`Button component render outlined button 1`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ hmVncp"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`Button component renders the component 1`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ hmVncp"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`Button component should render button with arrow 1`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ fAvsjm"
  >
    Click me
    <svg
      height="100%"
      viewBox="0 0 36 36"
      width="100%"
      x="0px"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <path
        class="cls-1"
        d="M34,18l-5-4v3H26v2h3v3ZM24,19H20V17h4v2Zm-6,0H14V17h4v2Zm-6,0H8V17h4v2ZM4,16a2,2,0,1,1-2,2A2,2,0,0,1,4,16Z"
        data-name="28"
        fill="currentColor"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`Button component should render filled button with dark hover 1`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ jJNmHb"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`Button component should render filled button with light hover 1`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ dhZYZA"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`Button component should render fullwidth button 1`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ fAvsjm"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`Button component should render outlined button 1`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ hdOqBX"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`Button component should should call the callback 1`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ fAvsjm"
  >
    Click me
    <svg
      height="100%"
      viewBox="0 0 36 36"
      width="100%"
      x="0px"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <path
        class="cls-1"
        d="M34,18l-5-4v3H26v2h3v3ZM24,19H20V17h4v2Zm-6,0H14V17h4v2Zm-6,0H8V17h4v2ZM4,16a2,2,0,1,1-2,2A2,2,0,0,1,4,16Z"
        data-name="28"
        fill="currentColor"
      />
    </svg>
  </button>
</DocumentFragment>
`;
